26.1.2: migrate build to ModDevGradle 2.0.142 + JDK25 + lombok fork fix; point at Mantle 26.1.2 jar; 26.1.2 coords